--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
-
 :root {
   --color-1: #f86f2d;
   --color-2: #fa8f3d;
@@ -16,12 +14,12 @@ html {
 }
 
 body {
-  font-family: 'Noto Serif', serif;
+  font-family: 'Open Sans', Arial, sans-serif;
   background-color: var(--white);
   font-size: 16px;
   line-height: 1.8;
   font-weight: 300;
-  color: rgba(0, 0, 0, 0.5); /* lighten(--black, 50%) equivalent */
+  color: rgba(0, 0, 0, 0.5); 
 }
 
 body.menu-show {
@@ -32,7 +30,7 @@ body.menu-show {
 }
 
 span {
-  color: rgba(0, 0, 0, 0.25); /* lighten(--black, 75%) equivalent */
+  color: rgba(0, 0, 0, 0.25); 
 }
 
 h1, h2, h3, h4, h5,
