--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,8 @@
 :root {
   --color-1: #f86f2d;
   --color-2: #fa8f3d;
-  --color-3:#faaa3a;
-  --white-hover:#ffffffcc;
+  --color-3: #faaa3a;
+  --white-hover: #ffffffcc;
 }
 
 html {
@@ -14,12 +14,11 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', Arial, sans-serif;
   background-color: var(--white);
   font-size: 16px;
   line-height: 1.8;
   font-weight: 300;
-  color: rgba(0, 0, 0, 0.5); 
+  color: rgba(0, 0, 0, 0.5);
 }
 
 body.menu-show {
@@ -30,11 +29,19 @@ body.menu-show {
 }
 
 span {
-  color: rgba(0, 0, 0, 0.25); 
+  color: rgba(0, 0, 0, 0.25);
 }
 
-h1, h2, h3, h4, h5,
-.h1, .h2, .h3, .h4, .h5 {
+h1,
+h2,
+h3,
+h4,
+h5,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5 {
   line-height: 1.4;
   color: var(--black);
   font-family: var(--font-secondary);
